--- a/src/main/webapp/resources/strazz/test.xhtml
+++ b/src/main/webapp/resources/strazz/test.xhtml
@@ -4,7 +4,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml"   
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:p="http://primefaces.org/ui"
       xmlns:composite="http://java.sun.com/jsf/composite">
     
     <composite:interface>
@@ -13,7 +12,9 @@
 	
 	<composite:implementation>
 		<p>this is my html content</p>
-		<p:commandButton value="Ops!" update="@all"/>
+		<h:commandButton value="Ops!">
+			<f:ajax render=":myForm" />
+		</h:commandButton>
 	</composite:implementation>
 	
 </html>
